src/objects/Interconnection__c.object
<CustomObject
     >
    <fields>
        <fullName>BW_Executed_Consent_to_Assignment_Sent__c</fullName>
        <label>BW Executed Consent to Assignment Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_to_Assignment_Owner_Executed__c</fullName>
        <label>Consent to Assignment Owner-Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_to_Assignment_Sent_to_Utility__c</fullName>
        <label>Consent to Assignment Sent to Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Consent_to_Assign_Util_Executed__c</fullName>
        <label>Date Consent to Assign. Util. Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Dist_Design_Finished_by_Utility__c</fullName>
        <label>Date Dist. Design Finished by Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Dist_Design_Started_by_Utility__c</fullName>
        <label>Date Dist. Design Started by Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_EPC_Cert_of_Completion_Received__c</fullName>
        <label>Date EPC Cert. of Completion Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Energization_Plan_Sent_to_Utility__c</fullName>
        <label>Date Energization Plan Sent to Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Legal_Form_Received_by_Utility__c</fullName>
        <label>Date Legal Form Received by Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_MASS_ACA_Application_Transferred__c</fullName>
        <label>Date MASS ACA Application Transferred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_NEPOOL_Application_Transferred__c</fullName>
        <label>Date NEPOOL Application Transferred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pole_Telco_Invoice_Paid__c</fullName>
        <label>Date Pole Telco Invoice Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pole_Telco_Invoice_Received__c</fullName>
        <label>Date Pole Telco Invoice Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_PTO_Letter_to_Utility__c</fullName>
        <label>Date Received PTO Letter to Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SMART_Application_Transferred__c</fullName>
        <label>Date SMART Application Transferred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SREC_Application_Transferred__c</fullName>
        <label>Date SREC Application Transferred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Substation_Design_Finished_by_Util__c</fullName>
        <label>Date Substation Design Finished by Util.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Substation_Design_Started_by_Util__c</fullName>
        <label>Date Substation Design Started by Util.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Utility_Executed_Consent_to_Assignm__c</fullName>
        <label>Date Utility-Executed Consent to Assignm</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Utility_Witness_Test_Checklist_Sent__c</fullName>
        <label>Date Utility Witness Test Checklist Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Wireless_Test_Submitted__c</fullName>
        <label>Date Wireless Test Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Witness_Test_Scheduled_by_Utility__c</fullName>
        <label>Date Witness Test Scheduled by Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_On_Site_Test__c</fullName>
        <label>Date of On-Site Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Witness_Test__c</fullName>
        <label>Date of Witness Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_Internal_AAA_BW_Executed__c</fullName>
        <label>Date the Internal AA&amp;A BW Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_Internal_AAA_Sent_to_Utility__c</fullName>
        <label>Date the Internal AA&amp;A Sent to Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_System_Owner_Contact__c</fullName>
        <label>New System Owner Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Week_for_Distribution_Design__c</fullName>
        <label>Number of Week for Distribution Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks_for_Substation_Design__c</fullName>
        <label>Number of Weeks for Substation Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pole_Set_Confirmation_Date__c</fullName>
        <label>Pole Set Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Interconnections</relationshipLabel>
        <relationshipName>Interconnections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTU_Line_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTU Line Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telco_Construction_Status__c</fullName>
        <label>Telco Construction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telco_Easement_Application_Status__c</fullName>
        <label>Telco Easement Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telecom_Co_Contact__c</fullName>
        <label>Telecom Co. Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Taken_By__c</fullName>
        <label>Test Taken By:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Application_Owner__c</fullName>
        <label>Utility Application Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Project_ID__c</fullName>
        <label>Utility Project ID #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Witness_Test_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Witness Test Passed</label>
        <type>Checkbox</type>
    </fields>
    <label>Interconnection</label>
    <nameField>
        <label>Interconnection</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interconnections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>